# dmosi-freertos

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
build_esp32/: CMakeCache.txt
cmake/: arch_mapping.cmake
config/: FreeRTOSConfig.h  FreeRTOSConfigArch.h  sdkconfig.h
config/arch/arm7_lpc2000/: FreeRTOSConfigArch.h
config/arch/arm_aarch64/: FreeRTOSConfigArch.h
config/arch/arm_ca9/: FreeRTOSConfigArch.h
config/arch/arm_cm0/: FreeRTOSConfigArch.h
config/arch/arm_cm23/: FreeRTOSConfigArch.h
config/arch/arm_cm3/: FreeRTOSConfigArch.h
config/arch/arm_cm33/: FreeRTOSConfigArch.h
config/arch/arm_cm35p/: FreeRTOSConfigArch.h
config/arch/arm_cm4f/: FreeRTOSConfigArch.h
config/arch/arm_cm52/: FreeRTOSConfigArch.h
config/arch/arm_cm55/: FreeRTOSConfigArch.h
config/arch/arm_cm7/: FreeRTOSConfigArch.h
config/arch/arm_cm85/: FreeRTOSConfigArch.h
config/arch/arm_cr4/: FreeRTOSConfigArch.h
config/arch/arm_cr5/: FreeRTOSConfigArch.h
config/arch/arm_cr82/: FreeRTOSConfigArch.h
config/arch/posix/: FreeRTOSConfigArch.h
config/arch/risc_v/: FreeRTOSConfigArch.h
config/arch/xtensa_esp32/: FreeRTOSConfigArch.h  esp_crosscore_int.h  esp_idf_version.h  sdkconfig.h
src/: dmosi_freertos.c  dmosi_freertos_internal.h  dmosi_heap.c  dmosi_interrupt.c  dmosi_malloc.c  dmosi_mutex.c  dmosi_process.c  dmosi_queue.c  dmosi_semaphore.c  dmosi_thread.c  dmosi_time.c  dmosi_timer.c  heap_dmod.c
tests/: CMakeLists.txt  main.c
